# armada

./: .coveragerc  .dockerignore  .gitignore  .gitreview  .readthedocs.yaml  .stestr.conf  .style.yapf  .zuul.yaml  CONTRIBUTING.rst  Dockerfile  Makefile  README.rst  bindep.txt  controller.sh  entrypoint.sh  plugin.yaml  requirements-direct.txt  requirements-frozen-bionic.txt  requirements-frozen.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
Armada.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  requires.txt  top_level.txt
armada/: .style.yapf  __init__.py  const.py  errors.py  shell.py
armada/api/: __init__.py  middleware.py  server.py
armada/api/controller/: armada.py  health.py  metrics.py  releases.py  rollback.py  test.py  tiller.py  validation.py  versions.py
armada/cli/: __init__.py  apply.py  apply_chart.py  delete.py  rollback.py  test.py  tiller.py  validate.py
armada/common/: client.py  i18n.py  policy.py  session.py
armada/common/policies/: __init__.py  base.py  service.py  tiller.py
armada/conf/: __init__.py  default.py  opts.py
armada/exceptions/: __init__.py  armada_exceptions.py  base_exception.py  chartbuilder_exceptions.py  helm_exceptions.py  manifest_exceptions.py  override_exceptions.py  source_exceptions.py  tiller_exceptions.py  validate_exceptions.py
armada/handlers/: armada.py  chart_delete.py  chart_deploy.py  chart_download.py  chartbuilder.py  document.py  helm.py  k8s.py  lock.py  manifest.py  metrics.py  override.py  pre_update_actions.py  release_diff.py  schema.py  test.py  tiller.py  wait.py
armada/schemas/: armada-chart-schema-v1.yaml  armada-chart-schema-v2.yaml  armada-chart-schema.yaml  armada-chartgroup-schema-v1.yaml  armada-chartgroup-schema-v2.yaml  armada-chartgroup-schema.yaml  armada-manifest-schema-v1.yaml  armada-manifest-schema-v2.yaml
armada/tests/: test_utils.py
armada/tests/unit/: base.py  fake_policy.py  fixtures.py
armada/utils/: helm.py  keystone.py  release.py  source.py  validate.py  validation_message.py
charts/armada/: Chart.yaml  values.yaml
charts/armada/crds/: armada.airshipit.org_armadacharts.yaml
charts/armada/templates/: configmap-bin.yaml  configmap-etc.yaml  configmap-gnp.yaml  daemonset-bootstrap.yaml  deployment-api.yaml  job-image-repo-sync.yaml  network_policy.yaml  secret-ingress-tls.yaml
charts/tiller/: Chart.yaml  requirements.yaml  values.yaml
charts/tiller/templates/: deployment-tiller.yaml  network_policy.yaml  tiller-service.yaml
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/_static/: armada.conf.sample
doc/source/commands/: apply.rst  apply_chart.rst  index.rst  rollback.rst  test.rst  tiller.rst
doc/source/development/: getting-started.rst
doc/source/operations/: documents.rst  guide-api.rst  guide-build-armada-yaml.rst  guide-helm-plugin.rst  guide-troubleshooting.rst  guide-use-armada.rst  index.rst  metrics.rst
etc/armada/: armada.conf.sample  policy.yaml  policy.yaml.sample
examples/: keystone-manifest.yaml  podinfo.yaml  simple.yaml  tar_example.yaml
hapi/chart/: chart_pb2.py  config_pb2.py  metadata_pb2.py  template_pb2.py
hapi/release/: hook_pb2.py  info_pb2.py  release_pb2.py  status_pb2.py  test_run_pb2.py  test_suite_pb2.py
hapi/services/: tiller_pb2.py
hapi/version/: version_pb2.py
images/armada/: Dockerfile.opensuse_15  Dockerfile.ubuntu_bionic  Dockerfile.ubuntu_focal  Dockerfile.ubuntu_jammy  Dockerfile.ubuntu_noble  Dockerfile.ubuntu_xenial
manifests/: chart-crd.yaml  kustomization.yaml  rbac.yaml
releasenotes/source/: conf.py  index.rst  unreleased.rst
swagger/: swaggerV2-api.yaml  swaggerV3-api.yaml
tools/: armada_image_run.sh  helm-hapi.sh  helm_install.sh  helm_tk.sh  image_tags.py  whitespace-linter.sh
tools/airship2-integration/: 000-clone-dependencies.sh  010-deploy-k8s.sh  020-apply-charts.sh
tools/airship2-integration/test/: test-job.yaml  test-rbac.yaml  test.sh
tools/gate/playbooks/: airship-armada-check.yaml  airship2-integration.yaml  airskiff-deploy.yaml  airskiff-reduce-site.yaml  build-charts.yaml  checkout-treasuremap-ref.yaml  debug-report.yaml  docker-image-build.yaml  git-config.yaml  osh-infra-build.yaml  osh-infra-collect-logs.yaml  osh-infra-deploy-k8s.yaml  pep8-linter.yaml  prepare-hosts.yaml  vars.yaml  (+5 more)
(+57 files in other folders)
