[metadata]
name = armada
summary = tool for managing multiple chart orchestration lifecycle
description-file = README.rst

author = armada team
home-page = https://airship-armada.readthedocs.io/en/latest/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    armada
    armada.cli
    armada.api
    armada.handlers
    hapi
    hapi.chart
    hapi.release
    hapi.services
    hapi.version

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[entry_points]
console_scripts =
    armada = armada.shell:main
oslo.config.opts =
    armada.conf = armada.conf.opts:list_opts
oslo.policy.policies =
    armada = armada.common.policies:list_rules

[pbr]
warnerrors = True

[wheel]
universal = 1

[nosetests]
verbosity=3
with-doctest=1

[yapf]
based_on_style = pep8
blank_line_before_nested_class_or_def = true
blank_line_before_module_docstring = true
split_before_logical_operator = false
