[metadata]
name = Armada
version = 1.1
summary = Tool for managing multiple Helm charts with dependencies by centralizing all configurations in a single Armada YAML and providing life-cycle hooks for all Helm releases.
description_file = README.rst
author = The Airship Authors
author_email = airship-discuss@lists.airshipit.org
home_page = https://airshipit.org

classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10

[files]
packages =
    armada
    armada.cli
    armada.api
    armada.handlers

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[entry_points]
console_scripts =
    armada = armada.shell:main
oslo.config.opts =
    armada.conf = armada.conf.opts:list_opts
oslo.policy.policies =
    armada = armada.common.policies:list_rules

[pbr]
warnerrors = True

[wheel]
universal = 1

[nosetests]
verbosity=3
with-doctest=1

[yapf]
based_on_style = pep8
column_limit = 79
blank_line_before_nested_class_or_def = true
blank_line_before_module_docstring = true
split_before_logical_operator = false
